--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 newspaper3k==0.2.8
 gradio==3.19.1
+nltk==3.7
+gensim==4.1.2
+sentence_transformers==2.2.2
+scikit-learn==1.2.1
+transformers==4.26.1
